fix min height on mobile

--- a/src/components/fieldProblem/fieldProblem.less
+++ b/src/components/fieldProblem/fieldProblem.less
@@ -6,7 +6,6 @@
     position     : relative;
     margin       : auto;
     width        : 100%;
-    max-width    : 400px;
     margin-bottom: 10px;
 
     .field_problem__label {
