--- a/src/components/fieldScreenshot/fieldScreenshot.less
+++ b/src/components/fieldScreenshot/fieldScreenshot.less
@@ -1,8 +1,11 @@
+// Copyright © 2021 Vladislav Mikhailov
+// Contacts: <vladi.mikh.vm@gmail.com>
+// License: http://opensource.org/licenses/MIT
+
 .field_screenshot {
     position     : relative;
     margin       : auto;
     width        : 100%;
-    max-width    : 400px;
     margin-bottom: 20px;
 
     .field_screenshot__label {
